# zmk-config5

./: build.yaml  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  Kconfig  Kconfig.behaviors  package.json  west.yml
app/boards/arm/nice_nano/: Kconfig  Kconfig.defconfig  Kconfig.shield  nice_nano.dtsi  nice_nano_v2.dts
app/boards/arm/shields/corne/: Kconfig.defconfig  corne.dts  corne_right.overlay
app/boards/shields/corne/: Kconfig  Kconfig.defconfig  corne.dtsi  corne.keymap  corne.zmk.yml  corne_right.conf  corne_right.overlay
app/boards/shields/corne/boards/: nice_nano_v2.overlay
app/boards/shields/trackball_pim447/: trackball_pim447.overlay
app/drivers/: CMakeLists.txt
app/drivers/sensor/: CMakeLists.txt  Kconfig
app/drivers/sensor/trackball_pim447/: Kconfig
app/drivers/zephyr/: CMakeLists.txt  Kconfig
app/drivers/zephyr/dts/bindings/sensor/: vendor-prefixes.txt
app/dts/: pimoroni.dts
app/dts/bindings/: CMakeLists.txt  binding.yaml  pimoroni,trackball_pim447.yaml  vendor-prefixes.txt  vendor-prefixes.yaml
app/dts/bindings/pimoroni/: pimoroni,trackball_pim447.yaml
app/dts/bindings/zmk/: trackball_pim447.h
app/src/display/: theme.c
app/src/display/widgets/: Kconfig  layer_status.c
app/src/mouse/: CMakeLists.txt  Kconfig
boards/: Kconfig
boards/arm/nice_nano/: nice_nano.dtsi  nice_nano_v2.dts  nice_nano_v2.overlay
boards/arm/shields/corne/: corne_right.overlay
boards/arm/shields/pimtrackball/: pimtrackball.overlay
boards/nice_nano/: Kconfig
boards/shields/corne/: corne_right.overlay  splitmouse.dtsi  splitmouse.zmk.yml
config/: Kconfig  Kconfig.defconfig  corne.conf  corne.dts  corne.dtsi  corne.keymap  corne.zmk.yml  corne_right.conf  corne_right.overlay  pimtrackball.overlay  prj.conf  prj_right.conf  splitmouse.conf  splitmouse.dtsi  splitmouse.zmk.yml  west.yml
config/boards/: nice_nano_v2.overlay
